--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <main class="App">
-      <div class="SelectedLanguage"></div>
-    </main>
+    <main class="App"></main>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
